fix html scroll-padding-top

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="scroll-padding-top: 3rem">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -23,10 +23,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
     />
     <link rel="stylesheet" href="/assets/css/Footer-Dark.css" />
     <link
@@ -171,7 +167,18 @@
               </p>
             </div>
             <div class="col-md-5 feature-box">
-              <i class="icon-earphones-alt icon"></i>
+              <svg
+                class="bi bi-headset icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="1em"
+                height="1em"
+                fill="currentColor"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 1a5 5 0 0 0-5 5v1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6a6 6 0 1 1 12 0v6a2.5 2.5 0 0 1-2.5 2.5H9.366a1 1 0 0 1-.866.5h-1a1 1 0 1 1 0-2h1a1 1 0 0 1 .866.5H11.5A1.5 1.5 0 0 0 13 12h-1a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h1V6a5 5 0 0 0-5-5z"
+                ></path>
+              </svg>
               <h4>Layanan Pelanggan</h4>
               <p>
                 Kami memberikan pelayanan yang cepat tanggap dan memberikan
