--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <p>
               Usaha kami bergerak dalam jasa distribusi air minum
               <em>Oxygen Premier Water</em>. Sejak 2016 kami telah bekerja sama
-              dengan <strong>PT. Tirta Alam Makmur</strong> selaku produsen
-              <em>Oxygen Premier Water</em> untuk memasarkan produk air minum
-              yang higienis, berkualitas, dan terjangkau bagi masyarakat.
+              dengan <strong>PT. Tirta Alam Makmur</strong> untuk memasarkan
+              produk air minum yang higienis, berkualitas, dan terjangkau bagi
+              masyarakat.
             </p>
           </div>
           <div class="row align-items-center">
